# tdata-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
examples/: cli.rs  test_tdata.rs
src/: account.rs  crypto.rs  error.rs  lib.rs  qdatastream.rs  storage.rs  tdesktop.rs
